--- a/EProject/Views/Shared/_Layout.cshtml
+++ b/EProject/Views/Shared/_Layout.cshtml
@@ -35,7 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Books List</a>
                         </li>
-                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ListOfRoles">Roles</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial"></partial>
                     <li class="nav-item">
