--- a/EProject/Views/Books/Index.cshtml
+++ b/EProject/Views/Books/Index.cshtml
@@ -18,7 +18,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary"><i class="fa-solid fa-book"></i> Add Book</a>
+    <a asp-action="Create" class="btn btn-primary"><i class="fa-solid fa-book"></i> Add Products</a>
 </p>
 <table class="table">
     <thead>
