--- a/EProject/Views/Books/Details.cshtml
+++ b/EProject/Views/Books/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Books</h4>
+    <h4>Products</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
