--- a/EProject/Views/Shared/_Layout.cshtml
+++ b/EProject/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="transition: color 0.3s; text-decoration: none;">Admin</a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" asp-area="" asp-controller="Category" asp-action="Index" style="text-decoration: none;">Category</a>
