--- a/EProject/wwwroot/css/MyCss.css
+++ b/EProject/wwwroot/css/MyCss.css
@@ -1,5 +1,6 @@
 ﻿﻿.a-cleanup {
     color: inherit;
+    text-decoration:none;
 }
 
 .a-cleanup:hover {
@@ -187,3 +188,29 @@ body {
         box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
         outline: none; /* Remove outline */
     }
+
+
+
+
+.container {
+/*    max-width: 800px;
+*/    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
+}
+
+
+
+.contact-info {
+    margin-bottom: 30px;
+}
+
+    .contact-info p {
+        margin-bottom: 5px;
+    }
+
+.map-container {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 30px;
+}
