--- a/EProject/Views/Home/ContactUs.cshtml
+++ b/EProject/Views/Home/ContactUs.cshtml
@@ -1,1 +1,13 @@
-﻿
+﻿<div class="container">
+    <h1>Contact Us</h1>
+    <div class="contact-info">
+        <p><strong>Email:</strong> arsalandev911@gmail.com</p>
+        <p><strong>Phone:</strong> +92 300 3786863</p>
+        <p><strong>Address:</strong> Karsaz, Karachi, Pakistan</p>
+    </div>
+    <div class="map-container">
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1234.5678901234567!2d-74.005941!3d40.712784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjfCsDQwJzQwLjEiTiA3NMKwMTknMzguMyJX!5e0!3m2!1sen!2sus!4v1648775311111!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+    <p>We'd love to hear from you! Feel free to reach out using the contact information above.</p>
+</div>
