--- a/EProject/Views/Shared/_Layout.cshtml
+++ b/EProject/Views/Shared/_Layout.cshtml
@@ -44,7 +44,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Store" asp-action="Index" style="transition: color 0.3s; text-decoration: none;">Shop Now</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactUs" style="transition: color 0.3s; text-decoration: none;">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy" style="transition: color 0.3s; text-decoration: none;">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Faqs" style="transition: color 0.3s; text-decoration: none;">FAQS</a>
                         </li>
                         @if (User.IsInRole("Admin"))
                         {
