--- a/EProject/wwwroot/css/MyCss.css
+++ b/EProject/wwwroot/css/MyCss.css
@@ -214,3 +214,17 @@ body {
     height: 300px;
     margin-bottom: 30px;
 }
+
+
+
+p {
+    color: #555;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.icon {
+    margin-right: 10px;
+    font-size: 24px;
+}
