--- a/EProject/Views/Shared/_Layout.cshtml
+++ b/EProject/Views/Shared/_Layout.cshtml
@@ -46,7 +46,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactUs" style="transition: color 0.3s; text-decoration: none;">Contact Us</a>
                         </li>
-                  
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Feedback" asp-action="Create" style="transition: color 0.3s; text-decoration: none;">Feedback</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy" style="transition: color 0.3s; text-decoration: none;">Privacy</a>
                         </li>
@@ -62,6 +64,7 @@
                                     <a class="dropdown-item" asp-area="" asp-controller="Category" asp-action="Index" style="text-decoration: none;">Category</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="Books" asp-action="Index" style="text-decoration: none;">Books List</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListOfRoles" style="text-decoration: none;">Roles</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Feedback" asp-action="Index" style="text-decoration: none;">Reply Feedbacks</a>
                                 </div>
                             </li>
                         }
